add testing helpers, refactor

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,11 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "classmap": [ "tests/TestCase.php" ],
+        "files": [
+            "tests/utilities/functions.php"
+        ]
     },
     "extra": {
         "laravel": {
